[package]
name = "tumblepub"
version = "0.1.0"
authors = ["Justin Schweigert <justin@schweigert.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/activitypub",
    "crates/db",
]

[dependencies]
tumblepub_ap = { path = "./crates/activitypub" }
tumblepub_db = { path = "./crates/db" }
# todo: reduce this into just the deps needed for the main app
# misc:
anyhow = "1.0"
dotenv = "0.15"
rand = "0.8"
thiserror = "1.0"
url = "2.2"
# web server:
actix-web = "3"
juniper_actix = "0.2"
# database:
# note that we can upgrade sqlx once actix_web hits 4.0
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.4", features = ["runtime-actix-rustls", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
# auth:
argon2rs = "0.2"
jsonwebtoken = "7.2"
# GraphQL:
juniper = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# ActivityPub:
lazy_static = "1.4"
openssl = "0.10"
regex = "1.4"
# theming:
handlebars = "3.5"
percent-encoding = "2.1"