[package]
name = "tumblepub"
version = "0.1.0"
authors = ["Justin Schweigert <justin@schweigert.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
anyhow = "1.0"
dunce = "1.0"

[dependencies]
tumblepub_ap = { path = "../crates/activitypub" }
tumblepub_db = { path = "../crates/db" }
tumblepub_gql = { path = "../crates/graphql" }
tumblepub_utils = { path = "../crates/utils" }
# misc:
anyhow = "1.0"
identicon-rs = "2.0"
rand = "0.8"
timeago = "0.3"
url = "2.2"
# web server:
actix-web = "3"
env_logger = "0.9"
# database:
# note that we can upgrade sqlx once actix_web hits 4.0
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.4", features = ["runtime-actix-rustls", "postgres", "uuid", "chrono", "json", "migrate", "offline"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
# auth:
argon2rs = "0.2"
# GraphQL:
async-graphql-actix-web = "2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# ActivityPub:
once_cell = "1.7"
openssl = "0.10"
regex = "1.5"
# theming:
handlebars = "3.5"
percent-encoding = "2.1"