[package]
name = "tumblepub_ap"
version = "0.1.0"
authors = ["Justin Schweigert <justin@schweigert.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
anyhow = "1.0"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
