[package]
name = "tumblepub_ap"
version = "0.1.0"
authors = ["Justin Schweigert <justin@schweigert.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tumblepub_db = { path = "../db" }
tumblepub_utils = { path = "../utils" }
activitystreams = "0.7.0-alpha.11"
activitystreams-ext = "0.1.0-alpha.2"
actix-web = "3"
anyhow = "1.0"
once_cell = "1.7"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
