[package]
name = "tumblepub_ap"
version = "0.1.0"
authors = ["Justin Schweigert <justin@schweigert.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tumblepub_db = { path = "../db" }
tumblepub_utils = { path = "../utils" }
actix-web = "3"
anyhow = "1.0"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.10"
once_cell = "1.7"
openssl = "0.10"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
