[package]
name = "tumblepub_db"
version = "0.1.0"
authors = ["Justin Schweigert <justin@schweigert.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argon2rs = "0.2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sqlx = { version = "0.4", features = ["runtime-actix-rustls", "postgres", "uuid", "chrono", "migrate", "offline"] }
url = "2.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
