[package]
name = "tumblepub_events"
version = "0.1.0"
authors = ["Justin Schweigert <justin@schweigert.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tumblepub_utils = { path = "../utils" }
anyhow = "1.0"
argon2rs = "0.2"
chrono = { version = "0.4", features = ["serde"] }
eventually = { version = "0.4.0", features = ["full"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
