[package]
name = "tumblepub_gql"
version = "0.1.0"
authors = ["Justin Schweigert <justin@schweigert.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tumblepub_ap = { path = "../activitypub" }
tumblepub_events = { path = "../events" }
tumblepub_utils = { path = "../utils" }
anyhow = "1.0"
async-graphql = { version = "2.8", features = ["uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
