[package]
name = "tumblepub_utils"
version = "0.1.0"
authors = ["Justin Schweigert <justin@schweigert.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
async-graphql = { version = "2.8", features = ["uuid", "chrono"] }
anyhow = "1.0"
jsonwebtoken = "7.2"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.4", features = ["runtime-actix-rustls", "postgres", "uuid", "chrono", "migrate", "offline"] }
thiserror = "1.0"
