[package]
name = "tumblepub_utils"
version = "0.1.0"
authors = ["Justin Schweigert <justin@schweigert.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
async-graphql = { version = "2.8", features = ["uuid", "chrono"] }
ammonia = "3.1"
anyhow = "1.0"
config = { version = "0.11", features = ["yaml"] }
jsonwebtoken = "7.2"
once_cell = "1.7"
openssl = "0.10"
percent-encoding = "2.1"
pulldown-cmark = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1.0"
